--- a/Bercy_AboutMe.html
+++ b/Bercy_AboutMe.html
@@ -51,7 +51,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-5">
-                        <img style="height:400px; float: right" src="Image/aboutmepic.png">
+                        <img style="height:400px; float: right" src="Image/aboutmepic2.png">
                     </div>
                     <div >
                         <h4 style="text-align: center; font-family: Oswald">Nice to Meet You!</h4>                   
