--- a/Bercy_Resume.html
+++ b/Bercy_Resume.html
@@ -162,7 +162,7 @@
         </section>
 
         
-        <div class="container-fluid" id="foot">
+        //<div class="container-fluid" id="foot">
              <footer class='container'>
                 <br>
                 <div class="row">
@@ -176,6 +176,6 @@
                 </div>
                 <br>
             </footer>
-        </div>
+        //</div>
     </body>
 </html>
