--- a/Bercy_Resume.html
+++ b/Bercy_Resume.html
@@ -146,7 +146,7 @@
                 <div >
                         <h3>Work Experience</h3>
                 </div>
-                <div class="content" style ="overflow:scroll;overflow-y:scroll;overflow-x:hidden;"> // eddited here
+                <div class="content" style ="overflow:scroll;overflow-y:scroll;overflow-x:hidden;"> <!-- edited here -->
                     <p> As I begin to approach attending college and eventually entering the workforce, I am currently gaining new work experience, skills and knowledge through field trips, speakers, internships and jobs.</p>
                     <p> From the field trips that I have attended, my trip to SAP, a company that sells enterprise software to companies, has been the most useful. Not only was I introduced to a large engineering company, but I was also given the opportunity to learn about appropriate and effective communication in the workplace. Presenters at this field trip covered topics such as how to give a compelling "elevator pitch", the importance of a follow-up email to receive advice from professionals, and what social intelligence looks like. I have applied this knowledge to how I practice work etiquette. I have improved the way I email teachers, managers and how I present myself to interviewers or other professionals. </p>
                     <p> Other influential speakers that has inspired me are a material testing manager and a contract engineer named Dan Cherner and Natalina Dernarai. Their presentation talked about the realistics of how to get an engineering degree, what a starting engineering job looks like, and most memorably the transition from engineering to business. They explained their process of starting as a civil engineer to becoming upper managers. This has lasted with me because they emphasized on how to grow in a corporate business from being an engineer.  </p>    
@@ -162,7 +162,7 @@
         </section>
 
         
-        //<div class="container-fluid" id="foot">
+        <!-- <div class="container-fluid" id="foot"> -->
              <footer class='container'>
                 <br>
                 <div class="row">
@@ -176,6 +176,6 @@
                 </div>
                 <br>
             </footer>
-        //</div>
+        <!-- </div> -->
     </body>
 </html>
