--- a/Bercy_Projects.html
+++ b/Bercy_Projects.html
@@ -50,17 +50,17 @@
             </div> <!-- just blank lines -->
             <div class="container">
                 <div class="row">
-                    <!-- <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                         <div class="hovereffect">
                             <img style="width: 400px" class="img-responsive" src="Image/scratch.png">
                             <div class="overlay">
-                                <h2>SCRATCH</h2>
+                                <h2>BLACKJACK</h2>
                                 <p> 
                                     <a href="SCRATCH.html">MORE ABOUT</a>
                                  </p> 
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                         <div class="hovereffect">
                             <img style="width:400px" class="img-responsive" src="Image/mitapp.png">
