Update and rename SCRATCH.html to BLACKJACK.html

--- a/BLACKJACK.html
+++ b/BLACKJACK.html
@@ -50,10 +50,10 @@
                             <br>
                             <br>
                         </div> <!-- just blank lines -->
-                        <p><span style="font-family: Oswald"> Name</span><span style="font-family:Lato"> : Scratch Project</span></p>
-                        <p><span style="font-family: Oswald"> Course</span><span style="font-family:Lato"> : Computer Sci/Software Engineer Program</span></p>
-                        <p><span style="font-family: Oswald"> Date</span><span style="font-family:Lato"> : September 21, 2016 </span></p>
-                        <p style="font-family:Lato">In this project, I created a pong game with a partner. The game was a single and multiplayer game with harder levels as you progress through them. The work was split evenly where I focused more of my time on the user vs computer feature. The biggest problem faced was repetitive and unnecessary code that constantly continue to override other code which resulted in laggy images. This was overcame by rewriting and removing repeated code. </p>
+                        <p><span style="font-family: Oswald"> Name</span><span style="font-family:Lato"> : BlackJack Project</span></p>
+                        <p><span style="font-family: Oswald"> Course</span><span style="font-family:Lato"> : AP Computer Science Applications</span></p>
+                        9<p><span style="font-family: Oswald"> Date</span><span style="font-family:Lato"> : May 13, 2016 </span></p>
+                        <p style="font-family:Lato">In this project, I created a blackjack game with a partner using Java. The game was a singleplayer game with a computer dealer. The work was split evenly where I focused more of my time on the logic behind allowing an ace to have a value of 1 or 11 and understanding/utlizing parts of the JSwing package (such as JFrame and JPanel class) to create graphical user interface. The biggest problem faced was during the program design, rather than the program implementation. It took some time to find a solution and break it down into identifying the classes, identifying the behaviours for each class, and determining the relationship between the classes. To see our work, check out this <a href="https://github.com/chloebercy/BlackJack"> repository.</a></p>
                     </div>
                     <div class="col-sm-4">
                          <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/121207747/?autostart=false" frameborder="0" allowfullscreen></iframe>
