--- a/Bercy_Projects.html
+++ b/Bercy_Projects.html
@@ -56,7 +56,7 @@
                             <div class="overlay">
                                 <h2>BLACKJACK</h2>
                                 <p> 
-                                    <a href="SCRATCH.html">MORE ABOUT</a>
+                                    <a href="BLACKJACK.html">MORE ABOUT</a>
                                  </p> 
                             </div>
                         </div>
