--- a/Bercy_Projects.html
+++ b/Bercy_Projects.html
@@ -52,9 +52,21 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                         <div class="hovereffect">
-                            <img style="width: 400px" class="img-responsive" src="Image/scratch.png">
+                            <img style="width: 400px" class="img-responsive" src="Image/black.png">
                             <div class="overlay">
                                 <h2>BLACKJACK</h2>
+                                <p> 
+                                    <a href="BLACKJACK.html">MORE ABOUT</a>
+                                 </p> 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                        <div class="hovereffect">
+                            <img style="width: 400px" class="img-responsive" src="Image/scratch.png">
+                            <div class="overlay">
+                                <h2>INTERACTIVE SEATING CHART</h2>
                                 <p> 
                                     <a href="BLACKJACK.html">MORE ABOUT</a>
                                  </p> 
