--- a/BLACKJACK.html
+++ b/BLACKJACK.html
@@ -52,7 +52,7 @@
                         </div> <!-- just blank lines -->
                         <p><span style="font-family: Oswald"> Name</span><span style="font-family:Lato"> : BlackJack Project</span></p>
                         <p><span style="font-family: Oswald"> Course</span><span style="font-family:Lato"> : AP Computer Science Applications</span></p>
-                        9<p><span style="font-family: Oswald"> Date</span><span style="font-family:Lato"> : May 13, 2016 </span></p>
+                        <p><span style="font-family: Oswald"> Date</span><span style="font-family:Lato"> : May 13, 2019 </span></p>
                         <p style="font-family:Lato">In this project, I created a blackjack game with a partner using Java. The game was a singleplayer game with a computer dealer. The work was split evenly where I focused more of my time on the logic behind allowing an ace to have a value of 1 or 11 and understanding/utlizing parts of the JSwing package (such as JFrame and JPanel class) to create graphical user interface. The biggest problem faced was during the program design, rather than the program implementation. It took some time to find a solution and break it down into identifying the classes, identifying the behaviours for each class, and determining the relationship between the classes. To see our work, check out this <a href="https://github.com/chloebercy/BlackJack"> repository.</a></p>
                     </div>
                     <div class="col-sm-4">
