--- a/Bercy_Projects.html
+++ b/Bercy_Projects.html
@@ -84,6 +84,8 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class= "row">
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                         <div class="hovereffect">
                             <img class="img-responsive" src="Image/avocado.jpg">
@@ -95,17 +97,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                        <div class="hovereffect">
-                            <img class="img-responsive" src="Image/blankproject.png">
-                            <div class="overlay">
-                                <h2>ENTREPRENEURSHIP PROJECT</h2>
-                                <p> 
-                                    <a href="">MORE ABOUT SOON</a>
-                                 </p> 
-                            </div>
-                        </div>
-                    </div>-->
+               
                     
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                         <div class="hovereffect">
