--- a/Bercy_Projects.html
+++ b/Bercy_Projects.html
@@ -64,7 +64,7 @@
                     <div class="row">
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                         <div class="hovereffect">
-                            <img style="width: 400px" class="img-responsive" src="Image/scratch.png">
+                            <img style="width: 400px" class="img-responsive" src="Image/meseating.jpg">
                             <div class="overlay">
                                 <h2>INTERACTIVE SEATING CHART</h2>
                                 <p> 
