centered the div?

--- a/Bercy_Projects.html
+++ b/Bercy_Projects.html
@@ -48,7 +48,7 @@
                 <br>
                 <br>
             </div> <!-- just blank lines -->
-            <div class="container">
+            <div class="container" style="margin:0 auto"> <!-- editd over here -->
                 <div class="row">
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                         <div class="hovereffect">
