update link to seatingcharthtml

--- a/Bercy_Projects.html
+++ b/Bercy_Projects.html
@@ -68,7 +68,7 @@
                             <div class="overlay">
                                 <h2>INTERACTIVE SEATING CHART</h2>
                                 <p> 
-                                    <a href="BLACKJACK.html">MORE ABOUT</a>
+                                    <a href="SEATING_CHART.html">MORE ABOUT</a>
                                  </p> 
                             </div>
                         </div>
