--- a/Bercy_AboutMe.html
+++ b/Bercy_AboutMe.html
@@ -70,7 +70,7 @@
             </div> <!-- just blank lines -->
         </section>
         
-        <div class="container-fluid" id="foot">
+       // <div class="container-fluid" id="foot">
              <footer class='container'>
                 <br>
                 <div class="row">
@@ -84,6 +84,6 @@
                 </div>
                 <br>
             </footer>
-        </div>
+        // </div>
     </body>
 </html>
