--- a/Bercy_AboutMe.html
+++ b/Bercy_AboutMe.html
@@ -71,7 +71,7 @@
         </section>
         
       <!--  <div class="container-fluid" id="foot"> -->
-             <footer class='container'>
+              <footer> <!-- <footer class='container'> -->
                 <br>
                 <div class="row">
                     <div class="pull-right">
