changing footer backgrounds

--- a/Bercy_AboutMe.html
+++ b/Bercy_AboutMe.html
@@ -70,8 +70,8 @@
             </div> <!-- just blank lines -->
         </section>
         
-      <!--  <div class="container-fluid" id="foot"> -->
-              <footer> <!-- <footer class='container'> -->
+      
+              <footer style="background-color: #D5D5D5"> 
                 <br>
                 <div class="row">
                     <div class="pull-right">
@@ -84,6 +84,5 @@
                 </div>
                 <br>
             </footer>
-        <!-- </div> -->
     </body>
 </html>
