--- a/Bercy_AboutMe.html
+++ b/Bercy_AboutMe.html
@@ -71,7 +71,7 @@
         </section>
         
       
-              <footer style="background-color: #D5D5D5"> 
+              <footer style="background-color: #D5D5D5;"> 
                 <br>
                 <div class="row">
                     <div class="pull-right">
