--- a/Bercy_AboutMe.html
+++ b/Bercy_AboutMe.html
@@ -75,7 +75,7 @@
                 <br>
                 <div class="row">
                     <div class="pull-right">
-                        <p>Dublin High School <span style="background-color: #D5D5D5;">----<span style="background-color: #D5D5D5;"></p>  
+                        <p>Dublin High School <span style="background-color: #D5D5D5;">aaaaa<span style="background-color: #D5D5D5;"></p>  
                     </div>
                     <div class="col-xs-8">
                         <a href="mailto:cxbercy@gmail.com"><img class="col-xs-2" src="Image/mailicon.png"/></a>
