--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             </section>
         </div>
 
-        <div class="container-fluid" id="foot">
-             <footer class='container'>
+  
+             <footer style="background-color: #D5D5D5;"> 
                 <br>
                 <div class="row">
                     <div class="pull-right">
@@ -101,6 +101,6 @@
                 </div>
                 <br>
             </footer>
-        </div>
+        
     </body>
 </html>
