--- a/Bercy_Resume.html
+++ b/Bercy_Resume.html
@@ -163,7 +163,7 @@
 
         
         <!-- <div class="container-fluid" id="foot"> -->
-             <footer class='container'>
+             <footer style="background-color: #D5D5D5;"> 
                 <br>
                 <div class="row">
                     <div class="pull-right">
