--- a/Bercy_Projects.html
+++ b/Bercy_Projects.html
@@ -132,8 +132,8 @@
             </div> <!-- just blank lines -->
         </section>
         
-       <div class="container-fluid" id="foot">
-             <footer class='container'>
+
+             <footer style="background-color: #D5D5D5;"> 
                 <br>
                 <div class="row">
                     <div class="pull-right">
@@ -146,6 +146,5 @@
                 </div>
                 <br>
             </footer>
-        </div>
     </body>
 </html>
