--- a/SEATING_CHART.html
+++ b/SEATING_CHART.html
@@ -62,7 +62,7 @@
             </div>
         </section>
    
-        <footer class='container'>
+        <footer style="background-color: #D5D5D5;"> 
             <div class="row">
                 <div class="pull-right">
                     <p>Dublin High School</p>  
