mech winch footer

--- a/Bercy_MechanicalWinch.html
+++ b/Bercy_MechanicalWinch.html
@@ -60,8 +60,7 @@
             </div>
         </section>
    
-        <div class="container-fluid" id="foot">
-             <footer class='container'>
+             <footer style="background-color: #D5D5D5;"> 
                 <br>
                 <div class="row">
                     <div class="pull-right">
@@ -74,6 +73,5 @@
                 </div>
                 <br>
             </footer>
-        </div>
     </body>
 </html>
