--- a/Bercy_ImageArtist.html
+++ b/Bercy_ImageArtist.html
@@ -61,8 +61,7 @@
             </div>
         </section>
    
-        <div class="container-fluid" id="foot">
-             <footer class='container'>
+             <footer style="background-color: #D5D5D5;"> 
                 <br>
                 <div class="row">
                     <div class="pull-right">
@@ -75,6 +74,5 @@
                 </div>
                 <br>
             </footer>
-        </div>
     </body>
 </html>
