--- a/Bercy_Projects.html
+++ b/Bercy_Projects.html
@@ -52,7 +52,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                         <div class="hovereffect">
-                            <img style="width:400px" class="img-responsive" src="Image/pcbdesign.png">
+                            <img style="width:400px" class="img-responsive" src="Image/pcbdesign.jpg">
                             <div class="overlay">
                                 <h2>PCB DESIGN</h2>
                                 <p> 
