--- a/PCB.html
+++ b/PCB.html
@@ -56,7 +56,7 @@
                         <p style="font-family:Lato">In this project, I created a printed circuit board. This process included creating the design of the board, printing + masking the design, etching, drilling and soldering the components. The circuit was designed to be russian roulette game, somewhat like the toy, Crocodile Dentist. It consists of a 555 timer, a decade counter, OR gates, switches and LEDS. The biggest problem faced was while creating the design for the board. While transferring my circuit from the simulated design on Multisim and a cirucit on a breadboard, I made an error while creating and simplifying the design on a printed circuit board. To see my work, check out the <a href="https://docs.google.com/document/d/1SY1HJjfoe7QZ_2bsl_XJqEU7h5-ZHg3D7jk6zmFYZ58/edit?usp=sharing"> documentation.</a></p>
                     </div>
                     <div class="col-sm-4">
-                         <img class="col-sm-9" src="Image/pcb2.png"/>
+                         <img src="Image/pcb2.png"/>
                     </div>
                 </div>
             </div>
