--- a/Bercy_Projects.html
+++ b/Bercy_Projects.html
@@ -72,7 +72,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                   <!-- <div class="row"> I DONT THINK THIS IS NECESSARY?--> 
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                         <div class="hovereffect">
                             <img style="width: 400px" class="img-responsive" src="Image/meseating.jpg">
@@ -151,11 +151,11 @@
                     
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                         <div class="hovereffect">
-                            <img class="img-responsive" src="Image/netlogo.jpg">
+                            <img style="width:400px" class="img-responsive" src="Image/mitapp.png">
                             <div class="overlay">
-                                <h2>MECHANICAL WINCH</h2>
+                                <h2>MIT APP INVENTOR</h2>
                                 <p> 
-                                    <a href="Bercy_MechanicalWinch.html">MORE ABOUT</a>
+                                    <a href="MIT_APP_INVENTOR.html">MORE ABOUT</a>
                                  </p> 
                             </div>
                         </div>
