--- a/Bercy_Projects.html
+++ b/Bercy_Projects.html
@@ -52,6 +52,16 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                         <div class="hovereffect">
+                            <img style="width:400px" class="img-responsive" src="Image/pld.JPG">
+                            <div class="overlay">
+                                <h2>PLD Display</h2>
+                                <p> 
+                                    <a href="Bercy_PLD.html">MORE ABOUT</a>
+                                 </p> 
+                            </div>
+                        </div>
+                    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                        <div class="hovereffect">
                             <img style="width:400px" class="img-responsive" src="Image/pcbdesign.jpg">
                             <div class="overlay">
                                 <h2>PCB DESIGN</h2>
@@ -72,7 +82,10 @@
                             </div>
                         </div>
                     </div>
-                   <!-- <div class="row"> I DONT THINK THIS IS NECESSARY?--> 
+                </div>
+                    
+                <div class= "row">
+                    
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                         <div class="hovereffect">
                             <img style="width: 400px" class="img-responsive" src="Image/meseating.jpg">
@@ -80,30 +93,6 @@
                                 <h2>INTERACTIVE SEATING CHART</h2>
                                 <p> 
                                     <a href="SEATING_CHART.html">MORE ABOUT</a>
-                                 </p> 
-                            </div>
-                        </div>
-                    </div>
-                    <!-- <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                        <div class="hovereffect">
-                            <img style="width:400px" class="img-responsive" src="Image/mitapp.png">
-                            <div class="overlay">
-                                <h2>MIT APP INVENTOR</h2>
-                                <p> 
-                                    <a href="MIT_APP_INVENTOR.html">MORE ABOUT</a>
-                                 </p> 
-                            </div>
-                        </div>
-                    </div> -->
-                </div>
-                <div class= "row">
-                    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                        <div class="hovereffect">
-                            <img class="img-responsive" src="Image/avocado.jpg">
-                            <div class="overlay">
-                                <h2>PYTHON IMAGE MANIPULATION</h2>
-                                <p> 
-                                    <a href="Bercy_ImageArtist.html">MORE ABOUT</a>
                                  </p> 
                             </div>
                         </div>
