add upcoming projects

--- a/Bercy_Projects.html
+++ b/Bercy_Projects.html
@@ -153,11 +153,11 @@
                     
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                         <div class="hovereffect">
-                            <img class="img-responsive" src="Image/ace.jpg">
+                            <img class="img-responsive" src="Image/blankproject.png">
                             <div class="overlay">
-                                <h2>ENTREPRENEURSHIP PROJECT [ACE]</h2>
+                                <h2>UPCOMING PROJECTS?</h2>
                                 <p> 
-                                    <a href="Bercy_ACE.html">MORE ABOUT</a>
+                                    <a href="Bercy_Projects.html">Coming Soon</a>
                                  </p> 
                             </div>
                         </div>
